# world_creator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  box.world  data_file.json  empty_world.world  gazebo_sdf.py  gui.py  gui_new.py  gui_old.py  install.sh  json_converter.py  package.xml  requirements.txt  start_creator.sh  start_gz.sh  tests.py  world_creator.py
.github/workflows/: catkin_build.yml
docker/: Dockerfile  docker.sh
models/: box.sdf  empty_world.world  line.sdf  qr_cube.sdf  window.sdf
models/brick-sign/: brick.dae  model.config  model.sdf
models/cube/: model.sdf
models/forward-left-sign/: forward-left.dae  model.config  model.sdf
models/forward-right-sign/: forward-right.dae  model.config  model.sdf
models/forward-sign/: forward.dae  model.config  model.sdf
models/left-sign/: left.dae  model.config  model.sdf
models/my_ground_plane/: model.config  model.sdf
models/right-sign/: model.config  model.sdf  (+1 more)
plugins/: traffic_light.cpp  traffic_light.h
scripts/: converter.py  data_structures.py  gazebo_objects.py  gazebo_sdf.py  gui.py  objects.py  test_plugin.py  world_creator.py
worlds/: example.json  example.world  task_1_01.json  task_1_01.world  task_1_02.json  task_1_02.world  task_1_03.json  task_1_03.world  task_1_04.json  task_1_04.world  task_1_05.json  task_1_05.world  task_2_01.json  task_2_01.world  task_2_02.json  task_2_02.world  task_2_03.json  task_2_03.world  task_2_04.json  task_2_04.world  task_2_05.json  task_2_05.world  world2.json  world2.world
zawrka/: maze2020v2.2.json  maze2020v2.2.world  maze2020v2.3.json  maze2020v2.3.world  maze2020v2.4.json  maze2020v2.4.world  maze2020v2.5.json  maze2020v2.5.world  maze2020v2.6.json  maze2020v2.6.world
(+16 files in other folders)
